[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "site2md"
version = "0.2.0"
authors = [
    { name = "David Legrand", email = "1110600+davlgd@users.noreply.github.com" },
]
description = "Host an API to convert websites to markdown with optional features"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Framework :: FastAPI",
    "Natural Language :: English",
    "Topic :: Text Processing :: Markup :: Markdown"
]

dependencies = [
    "aiofiles==25.1.0",
    "fastapi==0.121.3",
    "httpx==0.28.1",
    "pydantic==2.12.4",
    "python-multipart==0.0.20",
    "redis==7.1.0",
    "trafilatura==2.0.0",
    "uvicorn==0.38.0"
]

[project.optional-dependencies]
dev = [
    "pytest==9.0.1",
    "pytest-asyncio==1.3.0",
    "pytest-cov==7.0.0"
]

[project.urls]
Homepage = "https://github.com/davlgd/site2md"
Issues = "https://github.com/davlgd/site2md/issues"
